--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -127,4 +127,5 @@ jobs:
         export DISPLAY=:99
         chromedriver --url-base=/wd/hub &
         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # disable headless mode
+        sleep 20
         node_modules/.bin/ts-node $GITHUB_WORKSPACE/__tests__/chromedriver.ts
