--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,5 @@
 name: "Test chromedriver on *NIX"
 on:
-  push:
-    branches:
-      - '*'
-    tags:
-      - '*'
-    paths:
-      - '**'
-      - '!*.md'
   pull_request:
     branches:
       - '*'
@@ -125,7 +117,20 @@ jobs:
       run: |
         "$CHROMEAPP" --version
         export DISPLAY=:99
-        chromedriver --url-base=/wd/hub &
+        chromedriver --disable-dev-shm-usage --no-sandbox --url-base=/wd/hub &
         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # disable headless mode
-        sleep 20
+        # Wait for Xvfb
+        MAX_ATTEMPTS=120 # About 60 seconds
+        COUNT=0
+        echo -n "Waiting for Xvfb to be ready..."
+        while ! xdpyinfo -display "${DISPLAY}" >/dev/null 2>&1; do
+          echo -n "."
+          sleep 0.50s
+          COUNT=$(( COUNT + 1 ))
+          if [ "${COUNT}" -ge "${MAX_ATTEMPTS}" ]; then
+            echo "  Gave up waiting for X server on ${DISPLAY}"
+            exit 1
+          fi
+        done
+        echo "  Done - Xvfb is ready!"
         node_modules/.bin/ts-node $GITHUB_WORKSPACE/__tests__/chromedriver.ts
