--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -120,17 +120,16 @@ jobs:
         chromedriver --disable-dev-shm-usage --no-sandbox --url-base=/wd/hub &
         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # disable headless mode
         # Wait for Xvfb
-        MAX_ATTEMPTS=120 # About 60 seconds
-        COUNT=0
-        echo -n "Waiting for Xvfb to be ready..."
-        while ! xdpyinfo -display "${DISPLAY}" >/dev/null 2>&1; do
-          echo -n "."
-          sleep 0.50s
-          COUNT=$(( COUNT + 1 ))
-          if [ "${COUNT}" -ge "${MAX_ATTEMPTS}" ]; then
-            echo "  Gave up waiting for X server on ${DISPLAY}"
-            exit 1
-          fi
+        echo "Waiting for X Server $DISPLAY to be available"
+        MAX=120 # About 60 seconds
+        CT=0
+        while ! xdpyinfo >/dev/null 2>&1; do
+            sleep 0.50s
+            CT=$(( CT + 1 ))
+            if [ "$CT" -ge "$MAX" ]; then
+                echo "FATAL: $0: Gave up waiting for X server $DISPLAY"
+                exit 11
+            fi
         done
-        echo "  Done - Xvfb is ready!"
+        echo "X is available"
         node_modules/.bin/ts-node $GITHUB_WORKSPACE/__tests__/chromedriver.ts
